--- a/threejs/threejs-basics/package.json
+++ b/threejs/threejs-basics/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gsap": "^3.5.1",
-    "three": "^0.144.0"
+    "three": "^0.144.0",
+    "three-orbitcontrols-ts": "^0.1.2"
   }
 }
