--- a/threejs/threejs-basics/package.json
+++ b/threejs/threejs-basics/package.json
@@ -14,6 +14,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@types/dat.gui": "^0.7.7",
+    "dat.gui": "^0.7.9",
     "gsap": "^3.5.1",
     "three": "^0.144.0",
     "three-orbitcontrols-ts": "^0.1.2"
