--- a/threejs/threejs-basics/package.json
+++ b/threejs/threejs-basics/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "devDependencies": {
     "@types/three": "^0.144.0",
@@ -18,6 +19,7 @@
     "dat.gui": "^0.7.9",
     "gsap": "^3.5.1",
     "three": "^0.144.0",
-    "three-orbitcontrols-ts": "^0.1.2"
+    "three-orbitcontrols-ts": "^0.1.2",
+    "vercel": "^28.4.2"
   }
 }
